/**
 * Copyright (c) 2023-present, Ukama Inc.
 * All rights reserved.
 *
 * This source code is licensed under the XXX-style license found in the
 * LICENSE file in the root directory of this source tree. An additional grant
 * of patent rights can be found in the PATENTS file in the same directory.
 */

syntax = "proto2";

message BootEvent {

    required string orgName = 1;
    required string orgId   = 2;
    required string Ip      = 3;
}
